--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="container">
   <div class="qr">
   <input type="text">
-  <button>Genrate Qr</button>
+  <button>Generate Qr</button>
   </div>
  <img src="" alt="QR">
  </div>
