--- a/index.html
+++ b/index.html
@@ -25,12 +25,18 @@
         </div>
     </div>
   </div> -->
+ 
   <div class="container">
+     <h1>Generate QR</h1>
+    <div class="main">
   <div class="qr">
-  <input type="text">
+  <input type="text" placeholder="Enter any URL OR Text">
   <button>Generate Qr</button>
   </div>
  <img src="" alt="QR">
+ <h5 class="err">Please Enter Text or Any URL</h5>
+ <a class="dow sty" download="qr-code.png">Download QR</a>
+ </div>
  </div>
  <!-- <button>Dark</button> -->
  <script src="./script.js"></script>
