--- a/index.html
+++ b/index.html
@@ -1,44 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QR code gentrater</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>  
-    <!-- <div class="container">
-        <p>para 1</p>
-        <p>pare 2</p>
-        <p>para 3</p>
-        <p>para 4</p>
-    </div> -->
-    <!-- <p class="para" id="one">this is para one</p>
-    <p class="para">this is para two</p>
-    <button>Login</button>
-    <button>Sign-in</button> -->
-    <!-- <button class="login">Login</button> -->
-  <!-- <div class="parent">
-    <div class="child-1">
-        <div class="child-2">
-
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>Generate QR</h1>
+      <div class="main">
+        <div class="qr">
+          <input type="text" placeholder="Enter any URL OR Text" />
+          <button>Generate Qr</button>
         </div>
+        <img src="" alt="QR" />
+        <h5 class="err">Please Enter Text or Any URL</h5>
+        <a class="dow sty" download="qr-code.png">Download QR</a>
+      </div>
     </div>
-  </div> -->
- 
-  <div class="container">
-     <h1>Generate QR</h1>
-    <div class="main">
-  <div class="qr">
-  <input type="text" placeholder="Enter any URL OR Text">
-  <button>Generate Qr</button>
-  </div>
- <img src="" alt="QR">
- <h5 class="err">Please Enter Text or Any URL</h5>
- <a class="dow sty" download="qr-code.png">Download QR</a>
- </div>
- </div>
- <!-- <button>Dark</button> -->
- <script src="./script.js"></script>
-</body>
+
+    <script src="./script.js"></script>
+  </body>
 </html>
